src/objects/Cash_Reconciliation__c.object
<CustomObject>
    <fields>
        <fullName>Commit_Reconciliation_Date__c</fullName>
        <label>Commit Reconciliation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cash_Reconciliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reconciliation_Date__c</fullName>
        <label>Reconciliation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unreconciled</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Reconciled</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Actual__c</fullName>
        <label>Total Actual</label>
        <summarizedField>Cash_Reconciliation_Payment__c.Actual_Amount__c</summarizedField>
        <summaryForeignKey>Cash_Reconciliation_Payment__c.Cash_Reconciliation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Accounting_Id__c</fullName>
        <label>Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Last_Sync_Time__c</fullName>
        <label>Accounting Last Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Accounting_Response__c</fullName>
        <label>Accounting Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Available_For_QB_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For QB Sync</label>
        <type>Checkbox</type>
    </fields> 
    <fields>
        <fullName>Available_For_Xero_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Xero Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optional_Note__c</fullName>
        <label>Optional Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sync_Token__c</fullName>
        <label>Sync Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>               
    <label>Cash Reconciliation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Cash Reconciliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Reconciliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>